Fixed slug gets deleted by accident; SLug sanitized on update; Contact page outlined fields;